samples/_failures_safe/1761405419_b4699f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05a64467.c: In function ‘main’:
./samples/SAFE/__tmp_05a64467.c:158:21: error: expected declaration or statement at end of input
  158 |                     printf("Error: Matrices must have same dimensions for addition.\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_05a64467.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_05a64467.c:158:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_05a64467.c:158:21: error: expected declaration or statement at end of input
